[gd_scene load_steps=11 format=3 uid="uid://di13jvq07dyei"]

[ext_resource type="Script" uid="uid://bw4vqcnbxbdg6" path="res://ch_tree.gd" id="1_eseaa"]
[ext_resource type="Texture2D" uid="uid://r6fpgp7e03ao" path="res://resources/sprites/christmas-village-asset-pack/small-tree.png" id="1_jgkvd"]
[ext_resource type="Texture2D" uid="uid://dvf52hoed5nvn" path="res://resources/sprites/small-tree-ornaments.png" id="2_eseaa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eseaa"]
atlas = ExtResource("1_jgkvd")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqdp7"]
atlas = ExtResource("2_eseaa")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5rnim"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eseaa")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqdp7")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fyhqd"]
atlas = ExtResource("1_jgkvd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_twsnd"]
atlas = ExtResource("2_eseaa")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyhqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyhqd")
}],
"loop": true,
"name": &"empty",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twsnd")
}],
"loop": true,
"name": &"full",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_twsnd"]
radius = 12.0

[node name="ch_tree" type="Node2D"]
script = ExtResource("1_eseaa")

[node name="AnimatedSprite2D_bottom" type="AnimatedSprite2D" parent="."]
z_index = -1
position = Vector2(0, 8)
sprite_frames = SubResource("SpriteFrames_5rnim")
animation = &"empty"

[node name="AnimatedSprite2D_top" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_fyhqd")
animation = &"full"

[node name="pickable_area" type="Area2D" parent="AnimatedSprite2D_top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D_top/pickable_area"]
position = Vector2(0, 16)
shape = SubResource("CircleShape2D_twsnd")

[node name="collision" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collision"]
polygon = PackedVector2Array(-8, 2, -6, 0, 6, 0, 8, 2, 8, 9, 2, 14, -2, 14, -8, 9)

[connection signal="body_entered" from="AnimatedSprite2D_top/pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D_top/pickable_area" to="." method="_on_pickable_area_body_exited"]
